--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,9 @@
         top: 0;
         right: -125%;
         min-width: 320px;
-        min-height: 60%;
+        min-height: 30%;
+        max-height: 90%;
+        overflow: auto;
         padding: 10px;
         background-color: rgb(232, 232, 232);
         box-shadow: -2px 0 4px hsl(0 4% 15% / 10%);
@@ -49,7 +51,6 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-    
     }
     .cantidad-carrito{
         background-color: rgb(189, 126, 30);
@@ -91,7 +92,7 @@
     }
     .resta-suma-cartItem{
         border: 0.5px solid #fff;
-        width: 4rem;
+        width: 3rem;
     }
     .sumaSpan{
         cursor: pointer;
@@ -107,15 +108,25 @@
         color: rgb(41, 178, 0);
     }
     .cart-producto-title {
-        font-size: 1rem;
+        font-size: 0.9rem;
         text-transform: uppercase;
     }
     .cart-producto-price{
         font-weight: 500;
+        font-size: 0.8rem;
+    }
+    .cart-producto-cantidad{
+        font-size: 0.8rem;
+    }
+    .cart-producto-total{
+        font-size: 0.8rem;
     }
     .cart-total{
         border-top: 1px solid rgb(161, 55, 55);
         padding-top: 10px;
+    }
+    .total-compra-suma{
+        font-size: 0.9rem;
     }
     .btnDeleteItem {
         font-size: 24px;
@@ -159,7 +170,6 @@
         gap: 15px;
         justify-content: center;
     }
-    
     .productsTitle {
         font-size: 25px;
     }
@@ -185,7 +195,6 @@
     .cardItem {
         padding: 5px;
         height: 90%;
-        
     }
     .cardTitleProduct {
         border-top: 0.5px solid rgb(183, 183, 183);
@@ -218,9 +227,18 @@
     .asideAndCards{
         width: 100%;
     } 
-    
     /* Confirm Buy */
-    
+    .formBuy{
+        width: 100%;
+    }   
+    .formTable{
+        width: 100%;
+        min-width: 100px;
+        overflow: auto;
+    }
+    .inputs{
+        width:80%;
+    }
     /* modalbuy */
     .modal-2-container{
         opacity: 0;
@@ -232,16 +250,16 @@
         top: 0;
         left: 0;
         background-color: rgb(0,0,0,0.8);
-
     }
     .modal-2-buy{
-        width: 80%;
-        height: 60%;
+        width: 100%;
+        min-height: 60%;
+        max-height: 80%;
         background-color: #fff;
         position: relative;
         transition: transform 0.5s;
         transform: translatey(0);
-        border-radius: 5px;
+        overflow: auto;
     }
     .img-modal-buy{
         width: 35px;
@@ -256,21 +274,7 @@
         font-size: 30px;
         cursor: pointer;
     }
-    .close-icon-modal{
-        display: inline-block;
-        font-size: 18px;
-        position: absolute;
-        top: 0.5rem;
-        right: 0.5rem;
-        width: 22px;
-        height: 22px;
-        background-color: rgb(255, 0, 0);
-        color: #fff;
-        cursor: pointer;
-        text-align: center;
-        line-height: 23px;
-        border-radius: 5px;
-    }
+    
     .divImgX{
         width: 90%;
         height: 10%;
@@ -281,11 +285,9 @@
     }
     .modal-content-2{
         background-color: #dcdcdc;
-        width: 95%;
+        width: 100%;
         height: 85%;
-        border-radius: 5px;
     }
-    
     /* footer */
     .footerBox {
         background-image: url(../img/footerBack.jpg);
@@ -293,7 +295,6 @@
         background-size: cover;
         height: 150px;
         width: 100%;
-        
     }
     .logos{
         width: 38px;
@@ -302,7 +303,59 @@
         font-size: 18px;
         color: #fff;
     }
-
+    /* spinner */
+    .divSpinner{
+        width: 100%;
+        height: 100px;
+    }
+    .sk-chase {
+        width: 30px;
+        height: 30px;
+        position: relative;
+        animation: sk-chase 2.5s infinite linear both;
+    }
+    .sk-chase-dot {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        left: 0;
+        top: 0; 
+        animation: sk-chase-dot 2.0s infinite ease-in-out both; 
+    }
+    .sk-chase-dot:before {
+        content: '';
+        display: block;
+        width: 25%;
+        height: 25%;
+        background-color: #fb9440;
+        border-radius: 100%;
+        animation: sk-chase-dot-before 2.0s infinite ease-in-out both; 
+    }
+    .sk-chase-dot:nth-child(1) { animation-delay: -1.1s; }
+    .sk-chase-dot:nth-child(2) { animation-delay: -1.0s; }
+    .sk-chase-dot:nth-child(3) { animation-delay: -0.9s; }
+    .sk-chase-dot:nth-child(4) { animation-delay: -0.8s; }
+    .sk-chase-dot:nth-child(5) { animation-delay: -0.7s; }
+    .sk-chase-dot:nth-child(6) { animation-delay: -0.6s; }
+    .sk-chase-dot:nth-child(1):before { animation-delay: -1.1s; }
+    .sk-chase-dot:nth-child(2):before { animation-delay: -1.0s; }
+    .sk-chase-dot:nth-child(3):before { animation-delay: -0.9s; }
+    .sk-chase-dot:nth-child(4):before { animation-delay: -0.8s; }
+    .sk-chase-dot:nth-child(5):before { animation-delay: -0.7s; }
+    .sk-chase-dot:nth-child(6):before { animation-delay: -0.6s; }
+    @keyframes sk-chase {
+        100% { transform: rotate(360deg); } 
+    }
+    @keyframes sk-chase-dot {
+        80%, 100% { transform: rotate(360deg); } 
+    }
+    @keyframes sk-chase-dot-before {
+        50% {
+        transform: scale(0.4); 
+        } 100%, 0% {
+        transform: scale(1.0); 
+        } 
+    }
 }
 /* tablet */
 @media (min-width: 768px) and (max-width: 1100px){
@@ -337,7 +390,9 @@
         top: 0;
         right: -100%;
         width: 400px;
-        min-height: 60%;
+        min-height: 40%;
+        max-height: 70%;
+        overflow: auto;
         padding: 10px;
         background-color: rgb(232, 232, 232);
         box-shadow: -2px 0 4px hsl(0 4% 15% / 10%);
@@ -345,7 +400,6 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-    
     }
     .cantidad-carrito{
         background-color: rgb(189, 126, 30);
@@ -387,11 +441,10 @@
     }
     .resta-suma-cartItem{
         border: 0.5px solid #fff;
-        width: 4rem;
+        width: 3rem;
     }
     .sumaSpan{
         cursor: pointer;
-        
     }
     .sumaSpan:hover{
         color: rgb(41, 178, 0);
@@ -403,15 +456,25 @@
         color: rgb(41, 178, 0);
     }
     .cart-producto-title {
-        font-size: 1rem;
+        font-size: 0.9rem;
         text-transform: uppercase;
     }
     .cart-producto-price{
         font-weight: 500;
+        font-size: 0.8rem;
+    }
+    .cart-producto-cantidad{
+        font-size: 0.8rem;
+    }
+    .cart-producto-total{
+        font-size: 0.8rem;
     }
     .cart-total{
         border-top: 1px solid rgb(161, 55, 55);
         padding-top: 10px;
+    }
+    .total-compra-suma{
+        font-size:1rem;
     }
     .btnDeleteItem {
         font-size: 24px;
@@ -455,7 +518,6 @@
         gap: 15px;
         justify-content: center;
     }
-    
     .productsTitle {
         font-size: 35px;
     }
@@ -481,7 +543,6 @@
     .cardItem {
         padding: 5px;
         height: 90%;
-        
     }
     .cardTitleProduct {
         border-top: 0.5px solid rgb(183, 183, 183);
@@ -515,7 +576,17 @@
         width: 100%;
     } 
     /* Confirm Buy */
-   
+    .formBuy{
+    width: 100%;
+    }   
+    .formTable{
+        width: 100%;
+        min-width: 100px;
+        overflow: auto;
+    }
+    .inputs{
+        min-width: 200%;
+    }
     /* modalbuy */
     .modal-2-container{
         opacity: 0;
@@ -527,16 +598,17 @@
         top: 0;
         left: 0;
         background-color: rgb(0,0,0,0.8);
-
     }
     .modal-2-buy{
         width: 80%;
-        height: 60%;
+        min-height: 60%;
+        max-height: 80%;
+        overflow: auto;
         background-color: #fff;
         position: relative;
         transition: transform 0.5s;
         transform: translatey(0);
-        border-radius: 5px;
+        padding-bottom: 50px;
     }
     .img-modal-buy{
         width: 40px;
@@ -551,21 +623,6 @@
         font-size: 30px;
         cursor: pointer;
     }
-    .close-icon-modal{
-        display: inline-block;
-        font-size: 20px;
-        position: absolute;
-        top: 0.5rem;
-        right: 0.5rem;
-        width: 25px;
-        height: 25px;
-        background-color: rgb(255, 0, 0);
-        color: #fff;
-        cursor: pointer;
-        text-align: center;
-        line-height: 25px;
-        border-radius: 5px;
-    }
     .divImgX{
         width: 50%;
         height: 10%;
@@ -578,9 +635,7 @@
         background-color: #dcdcdc;
         width: 95%;
         height: 85%;
-        border-radius: 5px;
     }
-    
     /* footer */
     .footerBox {
         background-image: url(../img/footerBack.jpg);
@@ -588,7 +643,6 @@
         background-size: cover;
         height: 150px;
         width: 100%;
-        
     }
     .logos{
         width: 42px;
@@ -596,6 +650,59 @@
     .title-footer{
         font-size: 20px;
         color: #fff;
+    }
+    /* spinner */
+    .divSpinner{
+        width: 100%;
+        height: 80px;
+    }
+    .sk-chase {
+        width: 40px;
+        height: 40px;
+        position: relative;
+        animation: sk-chase 2.5s infinite linear both;
+    }
+    .sk-chase-dot {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        left: 0;
+        top: 0; 
+        animation: sk-chase-dot 2.0s infinite ease-in-out both; 
+    }
+    .sk-chase-dot:before {
+        content: '';
+        display: block;
+        width: 25%;
+        height: 25%;
+        background-color: #fb9440;
+        border-radius: 100%;
+        animation: sk-chase-dot-before 2.0s infinite ease-in-out both; 
+    }
+    .sk-chase-dot:nth-child(1) { animation-delay: -1.1s; }
+    .sk-chase-dot:nth-child(2) { animation-delay: -1.0s; }
+    .sk-chase-dot:nth-child(3) { animation-delay: -0.9s; }
+    .sk-chase-dot:nth-child(4) { animation-delay: -0.8s; }
+    .sk-chase-dot:nth-child(5) { animation-delay: -0.7s; }
+    .sk-chase-dot:nth-child(6) { animation-delay: -0.6s; }
+    .sk-chase-dot:nth-child(1):before { animation-delay: -1.1s; }
+    .sk-chase-dot:nth-child(2):before { animation-delay: -1.0s; }
+    .sk-chase-dot:nth-child(3):before { animation-delay: -0.9s; }
+    .sk-chase-dot:nth-child(4):before { animation-delay: -0.8s; }
+    .sk-chase-dot:nth-child(5):before { animation-delay: -0.7s; }
+    .sk-chase-dot:nth-child(6):before { animation-delay: -0.6s; }
+    @keyframes sk-chase {
+        100% { transform: rotate(360deg); } 
+    }
+    @keyframes sk-chase-dot {
+        80%, 100% { transform: rotate(360deg); } 
+    }
+    @keyframes sk-chase-dot-before {
+        50% {
+        transform: scale(0.4); 
+        } 100%, 0% {
+        transform: scale(1.0); 
+        } 
     }
 }
 /* desktop */
@@ -634,7 +741,9 @@
         top: 0;
         right: -100%;
         width: 400px;
-        min-height: 60%;
+        min-height: 40%;
+        max-height: 90%;
+        overflow: auto;
         padding: 10px;
         background-color: rgb(232, 232, 232);
         box-shadow: -2px 0 4px hsl(0 4% 15% / 10%);
@@ -642,7 +751,6 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-    
     }
     .cantidad-carrito{
         background-color: rgb(189, 126, 30);
@@ -688,7 +796,6 @@
     }
     .sumaSpan{
         cursor: pointer;
-        
     }
     .sumaSpan:hover{
         color: rgb(41, 178, 0);
@@ -705,10 +812,20 @@
     }
     .cart-producto-price{
         font-weight: 500;
+        font-size: 0.9rem;
+    }
+    .cart-producto-cantidad{
+        font-size: 0.9rem;
+    }
+    .cart-producto-total{
+        font-size: 0.9rem;
     }
     .cart-total{
         border-top: 1px solid rgb(161, 55, 55);
         padding-top: 10px;
+    }
+    .total-compra-suma{
+        font-size:1.1rem;
     }
     .btnDeleteItem {
         font-size: 24px;
@@ -744,7 +861,7 @@
     }
     /* products grid */
     .productsBoxGrid {
-        width: 90%;
+        width:90%;
         padding: 10px;
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(275px, 0.3fr));
@@ -777,10 +894,15 @@
         object-fit: cover;
         object-position: center;
     }
+    .imgCard:hover{
+        width:95% ;
+        height: 70%;
+        object-fit: cover;
+        object-position: center;
+    }
     .cardItem {
         padding: 5px;
         height: 90%;
-        
     }
     .cardTitleProduct {
         border-top: 0.5px solid rgb(183, 183, 183);
@@ -804,7 +926,6 @@
         font-size: 14px;
         width: 80px;
         }
-   
     .shoppingCart {
         background-color: rgb(225, 225, 225);;
         border-radius: 5px;
@@ -815,28 +936,39 @@
         width: 100%;
     } 
     /* Confirm Buy */
-  
+    .formBuy{
+        width: 100%;
+    }
+    .formTable{
+        width: 100%;
+        min-width: 100px;
+        overflow: auto;
+    }
+    .inputs{
+        width: 30rem;
+    }
     /* modalbuy */
     .modal-2-container{
         opacity: 0;
         visibility:hidden;
         width: 100%;
-        height: 100vh;
+        height: 100%;
         position: fixed;
         z-index: 1000;
         top: 0;
         left: 0;
-        background-color: rgb(0,0,0,0.8);
-
+        background-color: rgb(0,0,0,0.6);
     }
     .modal-2-buy{
         width: 70%;
-        height: 70%;
+        min-height: 60%;
+        max-height: 80%;
+        overflow: auto;
         background-color: #fff;
         position: relative;
         transition: transform 0.5s;
         transform: translatey(0);
-        border-radius: 5px;
+        padding-bottom: 50px;
     }
     .img-modal-buy{
         width: 40px;
@@ -851,21 +983,6 @@
         font-size: 30px;
         cursor: pointer;
     }
-    .close-icon-modal{
-        display: inline-block;
-        font-size: 20px;
-        position: absolute;
-        top: 0.8rem;
-        right: 0.9rem;
-        width: 25px;
-        height: 25px;
-        background-color: rgb(255, 0, 0);
-        color: #fff;
-        cursor: pointer;
-        text-align: center;
-        line-height: 25px;
-        border-radius: 5px;
-    }
     .divImgX{
         width: 50%;
         height: 10%;
@@ -874,10 +991,8 @@
     .modal-content-2{
         background-color: #dcdcdc;
         width: 95%;
-        height: 85%;
-        border-radius: 5px;
+        overflow: auto;
     }
-    
     /* footer */
     .footerBox {
         background-image: url(../img/footerBack.jpg);
@@ -885,13 +1000,74 @@
         background-size: cover;
         height: 200px;
         width: 100%;
-        
     } 
+    .title-footer:hover{
+        color: #000000;
+    }
     .logos{
-        width: 50px;
+        font-size: 45px;
+        text-decoration: none;
+        color: #000000;
+    }
+    .logos:hover{
+        text-decoration: none;
+        color: #dcdcdc;
     }
     .title-footer{
         font-size: 22px;
         color: #fff;
+    }
+    /* spinner */
+    .divSpinner{
+        width: 100%;
+        height: 100px;
+    }
+    .sk-chase {
+        width: 40px;
+        height: 40px;
+        position: relative;
+        animation: sk-chase 2.5s infinite linear both;
+    }
+    .sk-chase-dot {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        left: 0;
+        top: 0; 
+        animation: sk-chase-dot 2.0s infinite ease-in-out both; 
+    }
+    .sk-chase-dot:before {
+        content: '';
+        display: block;
+        width: 25%;
+        height: 25%;
+        background-color: #fb9440;
+        border-radius: 100%;
+        animation: sk-chase-dot-before 2.0s infinite ease-in-out both; 
+    }
+    .sk-chase-dot:nth-child(1) { animation-delay: -1.1s; }
+    .sk-chase-dot:nth-child(2) { animation-delay: -1.0s; }
+    .sk-chase-dot:nth-child(3) { animation-delay: -0.9s; }
+    .sk-chase-dot:nth-child(4) { animation-delay: -0.8s; }
+    .sk-chase-dot:nth-child(5) { animation-delay: -0.7s; }
+    .sk-chase-dot:nth-child(6) { animation-delay: -0.6s; }
+    .sk-chase-dot:nth-child(1):before { animation-delay: -1.1s; }
+    .sk-chase-dot:nth-child(2):before { animation-delay: -1.0s; }
+    .sk-chase-dot:nth-child(3):before { animation-delay: -0.9s; }
+    .sk-chase-dot:nth-child(4):before { animation-delay: -0.8s; }
+    .sk-chase-dot:nth-child(5):before { animation-delay: -0.7s; }
+    .sk-chase-dot:nth-child(6):before { animation-delay: -0.6s; }
+    @keyframes sk-chase {
+        100% { transform: rotate(360deg); } 
+    }
+    @keyframes sk-chase-dot {
+        80%, 100% { transform: rotate(360deg); } 
+    }
+    @keyframes sk-chase-dot-before {
+        50% {
+        transform: scale(0.4); 
+        } 100%, 0% {
+        transform: scale(1.0); 
+        } 
     }
 }
